--- a/Beginner_2/6 Variables.ipynb
+++ b/Beginner_2/6 Variables.ipynb
@@ -41,14 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grapes\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your code below\n",
+    "c = 'Grapes'\n",
     "\n",
+    "print(c)\n",
     "\n"
    ]
   },
@@ -122,11 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# In this example, all 3 objects are assigned to the same memory location.\n",
     "# Run the code\n",
@@ -149,11 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# In this example, multiple variables are assigned then switched\n",
     "# Run the code\n",
@@ -292,11 +321,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love Python!\n",
+      "Python\n"
+     ]
+    }
+   ],
    "source": [
     "my_string = \"I love Python!\"\n",
     "\n",
@@ -306,7 +344,7 @@
     "# Try it yourself!\n",
     "# Slice the string and the result should be \"Python\"\n",
     "# Write your code below:\n",
-    "\n",
+    "print(my_string[7:13])\n",
     "\n"
    ]
   },
@@ -323,11 +361,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HelloWorld\n",
+      "HelloHelloHello\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the code to see the example\n",
     "\n",
@@ -353,17 +400,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5]\n",
+      "[1, '7.86']\n"
+     ]
+    }
+   ],
    "source": [
     "my_list1 = [1, 2, 3, 4, 5]\n",
     "my_list2 = [1, \"John\", \"Bob\", \"7.86\"]\n",
     "\n",
     "# Try slicing the list:\n",
-    "\n",
+    "print(my_list1[3:5])\n",
+    "print(my_list2[0:4:3])\n",
     "\n"
    ]
   },
@@ -378,11 +435,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abcd', 786, 2.23, 'john', 70.2]\n",
+      "abcd\n",
+      "[786, 2.23]\n",
+      "[2.23, 'john', 70.2]\n",
+      "[123, 'john', 123, 'john']\n",
+      "['abcd', 786, 2.23, 'john', 70.2, 123, 'john']\n"
+     ]
+    }
+   ],
    "source": [
     "# Can you guess the output below?\n",
     "# Run the code to find out!\n",
@@ -414,11 +484,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('abcd', 786, 2.23, 'john', 70.2)\n",
+      "abcd\n",
+      "(786, 2.23)\n",
+      "(2.23, 'john', 70.2)\n",
+      "(123, 'john', 123, 'john')\n",
+      "('abcd', 786, 2.23, 'john', 70.2, 123, 'john')\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the code\n",
     "tuple = ('abcd', 786 , 2.23, 'john', 70.2)\n",
@@ -447,11 +530,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is one\n",
+      "This is two\n",
+      "{'dept': 'sales', 'code': 6734, 'name': 'john'}\n",
+      "dict_keys(['dept', 'code', 'name'])\n",
+      "dict_values(['sales', 6734, 'john'])\n",
+      "dict_items([('dept', 'sales'), ('code', 6734), ('name', 'john')])\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the code\n",
     "dict = {}\n",
