--- a/Beginner_2/6.2 Built-in Standard Data Types - Numbers.ipynb
+++ b/Beginner_2/6.2 Built-in Standard Data Types - Numbers.ipynb
@@ -58,11 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-9\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the code to see the result\n",
     "\n",
@@ -71,15 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aabc\n"
+     ]
+    }
+   ],
    "source": [
     "# It's not only applicable to numbers. Run the code to see the result\n",
     "\n",
-    "print(min('salad','tomato', 'pizza', 'abc'))"
+    "print(min('salad','tomato', 'pizza', 'abc', 'aabc'))"
    ]
   },
   {
@@ -94,11 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the code to see the result\n",
     "\n",
@@ -107,15 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zzebra\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the code to see the result\n",
     "\n",
-    "print(max('salad','tomato', 'pizza', 'abc'))"
+    "print(max('salad','tomato', 'pizza', 'abc', 'zebra', 'zzebra'))"
    ]
   },
   {
@@ -130,11 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n",
+      "7\n",
+      "1.75\n",
+      "1.34\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the code to see the result\n",
     "\n",
@@ -156,11 +199,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
    "source": [
     "import math   # This will import math module\n",
     "\n",
