--- a/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
+++ b/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
@@ -18,16 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Eric', 'John', 'Dale', 'Rob']\n",
+      "['apple', 'banana', 2012, 1993]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = ['Eric', 'John', 'Dale', 'Rob']\n",
     "list2 = [1, 2, 3, 4, 5 ]\n",
     "list3 = [\"a\", \"b\", \"c\", \"d\"]\n",
-    "list4 = ['apple', 'banana', 2012, 1993]"
+    "list4 = ['apple', 'banana', 2012, 1993]\n",
+    "\n",
+    "print(list1)\n",
+    "print(list4)"
    ]
   },
   {
@@ -45,30 +57,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n"
+     ]
+    }
+   ],
    "source": [
     "x = ['Eric', 'John', 'Dale', 'Rob']\n",
     "\n",
-    "print(x[0])"
+    "print(x[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Eric', 'John', 'Dale', 'Rob']\n"
+     ]
+    }
+   ],
    "source": [
     "# Specifying the beggining and the end.\n",
     "\n",
     "x = ['Eric', 'John', 'Dale', 'Rob']\n",
     "\n",
-    "print(x[0:3])"
+    "print(x[0:4])"
    ]
   },
   {
@@ -80,18 +108,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Will', 'Max Pogi']\n"
+     ]
+    }
+   ],
    "source": [
     "# Changing 'Dale' to 'Will'\n",
     "\n",
     "x = ['Eric', 'John', 'Dale', 'Rob']\n",
     "x[2] = \"Will\"\n",
+    "x[3] = \"Max Pogi\"\n",
     "\n",
-    "print(x[2])"
+    "print(x[2:4])"
    ]
   },
   {
@@ -107,11 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = ['P', 'y', 't', 'h', 'o','n']\n",
     "\n",
@@ -129,15 +177,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = ['P', 'y', 't', 'h', 'o','n','t']\n",
+    "x = ['P', 'y', 't', 'h', 'o','n','t','n']\n",
     "\n",
-    "x.index('t')"
+    "x.index('y')"
    ]
   },
   {
@@ -153,15 +212,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['P', 'y', 't', 'h', 'o', 'n', 'M', 'Pogi si Max']\n"
+     ]
+    }
+   ],
    "source": [
     "x = ['P', 'y', 't', 'h', 'o','n']\n",
     "\n",
     "x.append('M')\n",
+    "x.append('Pogi si Max')\n",
     "\n",
     "print(x)"
    ]
@@ -177,11 +245,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['P', 't', 'h', 'o', 'n']\n"
+     ]
+    }
+   ],
    "source": [
     "x = ['P', 'y', 't', 'h', 'o','n']\n",
     "\n",
@@ -200,15 +276,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['P', 'y', 't', 'o', 'n']\n"
+     ]
+    }
+   ],
    "source": [
     "x = ['P', 'y', 't', 'h', 'o','n']\n",
     "\n",
-    "x.remove('y')\n",
+    "x.remove('h')\n",
     "\n",
     "print(x)"
    ]
@@ -237,11 +321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['P', 'y']\n"
+     ]
+    }
+   ],
    "source": [
     "# Specifying start at the beginning and end at the second element\n",
     "\n",
@@ -251,11 +343,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['o', 'n']\n"
+     ]
+    }
+   ],
    "source": [
     "# Specifying start at the next to last element and go to the end\n",
     "\n",
@@ -265,11 +365,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['P', 'y', 't', 'h', 'o']\n"
+     ]
+    }
+   ],
    "source": [
     "# Specifying start at the beginning and go to the next to last element\n",
     "\n",
@@ -286,16 +394,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['y', 'h', 'n']\n"
+     ]
+    }
+   ],
    "source": [
     "# Specifying a step argument returns every n-th item\n",
     "\n",
     "x = ['P', 'y', 't', 'h', 'o','n']\n",
-    "print(x[::2])"
+    "print(x[1::2])"
    ]
   },
   {
@@ -307,11 +423,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['n', 'o', 'h', 't', 'y', 'P']\n"
+     ]
+    }
+   ],
    "source": [
     "# Return a reversed version of the list ( or string )\n",
     "\n",
@@ -330,16 +454,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Apple', 'Banana', 'Orange']\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = [\"Grapes\", \"Apple\", \"Banana\", \"Orange\", \"Melon\"]\n",
     "\n",
     "#Write your code below\n",
-    "\n",
+    "print(fruits[1:4])\n",
     "\n",
     "\n"
    ]
@@ -353,16 +485,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Melon', 'Orange', 'Banana', 'Apple', 'Grapes']\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = [\"Grapes\", \"Apple\", \"Banana\", \"Orange\", \"Melon\"]\n",
     "\n",
     "#Write your code below\n",
-    "\n",
+    "print(fruits[::-1])\n",
     "\n",
     "\n"
    ]
@@ -376,18 +516,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Grapes', 'Apple', 'Banana', 'Orange', 'Melon', 'Mango']\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = [\"Grapes\", \"Apple\", \"Banana\", \"Orange\", \"Melon\"]\n",
     "\n",
     "#Write your code below\n",
-    "\n",
+    "fruits.append(\"Mango\")\n",
+    "print(fruits)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
