--- a/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
+++ b/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
@@ -19,15 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('apple', 'banana', 2012, 1993)\n"
+     ]
+    }
+   ],
    "source": [
     "tuple1 = ('apple', 'banana', 2012, 1993)\n",
     "tuple2 = (1, 2, 3, 4, 5 )\n",
-    "tuple3 = \"a\", \"b\", \"c\", \"d\""
+    "tuple3 = \"a\", \"b\", \"c\", \"d\"\n",
+    "\n",
+    "print(tuple1)"
    ]
   },
   {
@@ -39,13 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tuple1 = ()"
+    "tuple1 = ()\n",
+    "type(tuple1)"
    ]
   },
   {
@@ -57,13 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50,)\n"
+     ]
+    }
+   ],
    "source": [
-    "tuple1 = (50,)"
+    "tuple1 = (50,)\n",
+    "print(tuple1)"
    ]
   },
   {
@@ -81,28 +112,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tuple1 = ('P','y','t','h','o','n')\n",
     "\n",
-    "tuple1[0]"
+    "tuple1[0]\n",
+    "tuple1[5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('P', 't')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tuple1 = ('P','y','t','h','o','n')\n",
     "\n",
-    "tuple1[0:3]"
+    "tuple1[0:4:2]"
    ]
   },
   {
@@ -122,11 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run the Code\n",
     "my_tuple = (1, 2, 3, 4, 5)\n",
@@ -149,16 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the code\n",
     "my_tuple = ('apple', 'banana', 'apple', 'orange','banana');\n",
     "\n",
-    "print(my_tuple.count('apple'))"
+    "print(my_tuple.count('grapes'))"
    ]
   },
   {
@@ -174,17 +247,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run the code\n",
+    "my_tuple = ('apple', 'banana', 'apple', 'orange','banana');\n",
+    "\n",
+    "print(my_tuple.index('apple'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Run the code\n",
-    "my_tuple = ('apple', 'banana', 'apple', 'orange','banana');\n",
-    "\n",
-    "print(my_tuple.index('banana'))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
