--- a/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
+++ b/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
@@ -56,11 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tell me why, ain't nothin' but a heartbreak.\n"
+     ]
+    }
+   ],
    "source": [
     "string_sample1 = \"Tell me why, ain't nothin' but a heartbreak.\"\n",
     "\n",
@@ -76,11 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tell me why, ain't nothin' but a heartbreak.\n"
+     ]
+    }
+   ],
    "source": [
     "string_sample2 = 'Tell me why, ain\\'t nothin\\' but a heartbreak.'\n",
     "\n",
@@ -104,11 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am 6'2\" tall.\n",
+      "I am 6'2\" tall.\n"
+     ]
+    }
+   ],
    "source": [
     "escape_1 = \"I am 6'2\\\" tall.\" # escape double-quote inside string\n",
     "escape_2 = 'I am 6\\'2\" tall.' # escape single-quote inside string\n",
@@ -134,11 +159,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tThis string is tabbed.\n"
+     ]
+    }
+   ],
    "source": [
     "# Tab\n",
     "string_tab = \"\\tThis string is tabbed.\"\n",
@@ -148,11 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This will split\n",
+      "on a line.\n"
+     ]
+    }
+   ],
    "source": [
     "# Split\n",
     "string_split = \"This will split\\non a line.\"\n",
@@ -162,11 +204,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This \\ is \\ a \\ backslashed \\ string.\n"
+     ]
+    }
+   ],
    "source": [
     "# Backslash\n",
     "string_backslash = \"This \\\\ is \\\\ a \\\\ backslashed \\\\ string.\"\n",
@@ -176,11 +226,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "My to do list:\n",
+      "\t* Study Python.\n",
+      "\t* Be great at Python.\n",
+      "\t* Conquer the world.\n",
+      "\t* Eat Bananas\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# List\n",
     "string_list = \"\"\"\n",
@@ -188,6 +252,7 @@
     "\\t* Study Python.\n",
     "\\t* Be great at Python.\n",
     "\\t* Conquer the world.\n",
+    "\\t* Eat Bananas\n",
     "\"\"\"\n",
     "\n",
     "print(string_list)"
@@ -210,11 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO, WORLD!\n"
+     ]
+    }
+   ],
    "source": [
     "# using .upper()\n",
     "my_string1 = \"hello, world!\"\n",
@@ -224,11 +297,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, world!\n",
+      "hi, python!\n"
+     ]
+    }
+   ],
    "source": [
     "# using .lower()\n",
     "\n",
@@ -236,7 +318,7 @@
     "my_string3 = \"HI, PYTHON!\"\n",
     "\n",
     "print(my_string2.lower())\n",
-    "print(my_string2.lower())"
+    "print(my_string3.lower())"
    ]
   },
   {
@@ -252,14 +334,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_string4 = \"Oscar loves to google words that start with o's\"\n",
-    "my_string4.count(\"o\") "
+    "my_string5 = my_string4.lower()\n",
+    "my_string5.count(\"o\") "
    ]
   },
   {
@@ -277,11 +371,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run the code\n",
     "\n",
@@ -320,14 +425,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is str example....wow!!! this is really string\n"
+     ]
+    }
+   ],
    "source": [
     "str = \"this is string example....wow!!! this is really string\"\n",
-    "print(str.replace(\"wow\", \"amazing\"))"
+    "print(str.replace(\"string\", \"str\", 1))"
    ]
   },
   {
@@ -347,11 +460,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love Python\n"
+     ]
+    }
+   ],
    "source": [
     "print((\"I love %s\") %(\"Python\")) "
    ]
@@ -367,11 +488,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love Pizza.\n",
+      "My food is only 50 Pesos\n",
+      "Pizza costs 50\n"
+     ]
+    }
+   ],
    "source": [
     "food = \"Pizza\"\n",
     "price = 50\n",
@@ -396,13 +527,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one two\n"
+     ]
+    }
+   ],
    "source": [
-    "print('{1} {0}'.format('one','two'))"
+    "print('{0} {1}'.format('one','two'))"
    ]
   },
   {
@@ -414,17 +553,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one two\n",
+      "one two four\n"
+     ]
+    }
+   ],
    "source": [
     "# Old\n",
     "print('%s %s' % ('one', 'two'))\n",
     "\n",
     "# New\n",
-    "print('{} {}'.format('one', 'two'))"
+    "print('{} {} {}'.format('one', 'two', 'four', 'three'))"
    ]
   },
   {
@@ -442,11 +590,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Love\n"
+     ]
+    }
+   ],
    "source": [
     "my_string = \"I Love Python\"\n",
     "\n",
@@ -455,11 +611,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Love Pytho\n"
+     ]
+    }
+   ],
    "source": [
     "my_string = \"I Love Python\"\n",
     "\n",
@@ -468,11 +632,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I Lo\n"
+     ]
+    }
+   ],
    "source": [
     "my_string = \"I Love Python\"\n",
     "\n",
@@ -481,11 +653,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ve Python\n"
+     ]
+    }
+   ],
    "source": [
     "my_string = \"I Love Python\"\n",
     "\n",
@@ -494,11 +674,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ILv yhn\n"
+     ]
+    }
+   ],
    "source": [
     "my_string = \"I Love Python\"\n",
     "\n",
@@ -507,11 +695,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nohtyP evoL I\n"
+     ]
+    }
+   ],
    "source": [
     "my_string = \"I Love Python\"\n",
     "\n",
@@ -529,17 +725,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vowels 11, Uppercase 1, Lowercase 34\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = \"The quick brown fox jumps over the lazy dog\"\n",
     "\n",
     "# Write your code below:\n",
     "\n",
-    "\n"
+    "upper_count = 0\n",
+    "lower_count = 0\n",
+    "vowel_count = 0\n",
+    "\n",
+    "for letter in sentence:\n",
+    "    if letter.isupper():\n",
+    "        upper_count += 1\n",
+    "    if letter.islower():\n",
+    "        lower_count += 1\n",
+    "    if letter in \"aeiouAEIOU\":\n",
+    "        vowel_count += 1\n",
+    "        \n",
+    "print(\"Vowels {}, Uppercase {}, Lowercase {}\".format(vowel_count, upper_count, lower_count))"
    ]
   },
   {
@@ -553,18 +769,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I LOVE PYTHON SO MUCH.\n",
+      "i love python so much.\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = \"i LoVe PyThOn sO MuCh.\"\n",
     "\n",
     "#Write your code below:\n",
+    "print(sentence.upper())\n",
+    "print(sentence.lower())\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
