--- a/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
+++ b/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
@@ -45,17 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{123: 456, 'key1': 'value1', ('key3', 'key4'): 'value3'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_dictionary = {\n",
     "    'key1': 'value1',\n",
     "     123: 456,\n",
     "    ('key3', 'key4'): 'value3'\n",
-    "}"
+    "}\n",
+    "\n",
+    "my_dictionary"
    ]
   },
   {
@@ -69,11 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bob'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run the code to see the result\n",
     "my_dictionary = {\n",
@@ -117,15 +141,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
     "\n",
-    "my_dictionary['Name']"
+    "my_dictionary['Name']\n",
+    "my_dictionary['Age']"
    ]
   },
   {
@@ -137,13 +173,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No such key\n"
+     ]
+    }
+   ],
    "source": [
-    "if 'Name' in my_dictionary:\n",
+    "if 'Gender' in my_dictionary:\n",
     "    print(my_dictionary['Name'])\n",
     "else:\n",
     "    print(\"No such key\")"
@@ -158,11 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'has_key'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-4584d1b6a34c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mmy_dictionary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhas_key\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# only works in Python 2.x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_dictionary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No such key\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'has_key'"
+     ]
+    }
+   ],
    "source": [
     "if my_dictionary.has_key('Name'):  # only works in Python 2.x\n",
     "    print(my_dictionary['Name'])\n",
@@ -201,15 +257,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Age': 22, 'Gender': 'Male', 'Name': 'Eric'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
     "\n",
-    "my_dictionary['Gender']='Male'"
+    "my_dictionary['Gender']='Male'\n",
+    "my_dictionary"
    ]
   },
   {
@@ -221,11 +289,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pizza costs 50\n",
+      "Ramen costs 180\n",
+      "Burger costs 120\n"
+     ]
+    }
+   ],
    "source": [
     "# A dictionary of food and its prices\n",
     "food = { \n",
@@ -241,7 +319,8 @@
     "food['Ham and Cheese sandwich'] = 80\n",
     "\n",
     "print(\"Pizza costs\", food['Pizza'])\n",
-    "print(\"Ramen costs\", food['Ramen'])"
+    "print(\"Ramen costs\", food['Ramen'])\n",
+    "print(\"Burger costs\", food['Burger'])"
    ]
   },
   {
@@ -267,11 +346,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'US'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# A dictionary of countries and its abbreviation\n",
     "country = {\n",
@@ -284,8 +374,9 @@
     "\n",
     "# Change the value of 'France'\n",
     "country['France'] = 'FR'\n",
-    "\n",
-    "country['France']"
+    "country['United States of America'] = 'US'\n",
+    "country['France']\n",
+    "country['United States of America']"
    ]
   },
   {
@@ -319,11 +410,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Pizza': 50, 'Ramen': 180, 'Spaghetti': 150}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "food = { \n",
     "    'Pizza': 50,\n",
@@ -335,7 +437,7 @@
     "\n",
     "# Delete the key 'Garlic Bread' along with its value\n",
     "del food['Garlic Bread']\n",
-    "\n",
+    "del food['Carbonara']\n",
     "food"
    ]
   },
@@ -352,11 +454,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run the code to see how len() works\n",
     "\n",
@@ -376,11 +489,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{'Age': 22, 'Name': 'Eric'}\""
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run the code to see how str() works\n",
     "\n",
@@ -400,13 +524,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('Age', 22), ('Name', 'Eric'), ('Gender', 'M')])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
+    "my_dictionary = {'Name': 'Eric', 'Age': 22, 'Gender': 'M'}\n",
     "\n",
     "dict.items(my_dictionary) or my_dictionary.items()  # my_dictionary.iteritems() in Python 2.x"
    ]
@@ -422,13 +557,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Age', 'Name', 'Gender'])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
+    "my_dictionary = {'Name': 'Eric', 'Age': 22, 'Gender': 'M'}\n",
     "\n",
     "dict.keys(my_dictionary) or my_dictionary.keys()  # my_dictionary.iterkeys() in Python 2.x"
    ]
@@ -444,16 +590,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([22, 'Eric', 'M'])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
+    "my_dictionary = {'Name': 'Eric', 'Age': 22, 'Gender': 'M'}\n",
     "\n",
     "dict.values(my_dictionary) or my_dictionary.values()  # my_dictionary.itervalues() in Python 2.x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
