--- a/Beginner_3/7. Loops and Iteration.ipynb
+++ b/Beginner_3/7. Loops and Iteration.ipynb
@@ -11,13 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x > 0: 5\n",
+      "x > 0: 4\n",
+      "x > 0: 3\n",
+      "x > 0: 2\n",
+      "x > 0: 1\n"
+     ]
+    }
+   ],
    "source": [
-    "x = 3\n",
+    "x = 5\n",
     "while x > 0:\n",
     "    print(\"x > 0:\", x)\n",
     "    x -= 1"
@@ -32,16 +44,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "power puff\n",
+      "everything nice\n",
+      "spice\n",
+      "sugar\n"
+     ]
+    }
+   ],
    "source": [
     "ingredients = [\n",
     "    'sugar',\n",
     "    'spice',\n",
     "    'everything nice',\n",
+    "    'power puff'\n",
     "]\n",
     "while ingredients:\n",
     "    pop = ingredients.pop()\n",
@@ -59,13 +83,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iOS 3\n",
+      "Android 7\n",
+      "Firefox OS 10\n",
+      "Windows Phone 13\n"
+     ]
+    }
+   ],
    "source": [
-    "mobile_os = ['iOS', 'Android', 'Firefox OS']\n",
+    "mobile_os = ['iOS', 'Android', 'Firefox OS', 'Windows Phone']\n",
     "\n",
     "for m in mobile_os:   # This loops through the mobile_os list\n",
     "    print(m, len(m))  # With each member stored in a temporary variable - m"
@@ -82,11 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "    print(i)"
@@ -105,33 +152,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list(range(5, 10))"
+    "list(range(5, 11))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 8, 11, 14]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(range(5, 15, 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 5, 3, 1, -1, -3, -5]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(range(7, -7, -2))"
    ]
@@ -147,13 +227,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 tic\n",
+      "1 tac\n",
+      "2 toe\n",
+      "3 tick\n"
+     ]
+    }
+   ],
    "source": [
-    "for index, value in enumerate(['tic', 'tac', 'toe']):\n",
+    "for index, value in enumerate(['tic', 'tac', 'toe', 'tick']):\n",
     "    print(index, value)"
    ]
   },
@@ -177,11 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found an even number 2\n",
+      "Found a number 3\n",
+      "Found an even number 4\n",
+      "Found a number 5\n",
+      "Found an even number 6\n"
+     ]
+    }
+   ],
    "source": [
     "for num in range(2, 7):\n",
     "    if num % 2 == 0:\n",
@@ -201,11 +304,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found an even number 2\n"
+     ]
+    }
+   ],
    "source": [
     "for num in range(2, 10):\n",
     "    if num % 2 == 0:\n",
@@ -232,11 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 is a prime number\n",
+      "3 is a prime number\n",
+      "4 equals 2 * 2\n",
+      "5 is a prime number\n",
+      "6 equals 2 * 3\n"
+     ]
+    }
+   ],
    "source": [
     "for n in range(2, 7):\n",
     "    for x in range(2, n):\n",
@@ -260,11 +383,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x > 0: 3\n",
+      "x > 0: 2\n",
+      "x > 0: 1\n",
+      "else: 0\n"
+     ]
+    }
+   ],
    "source": [
     "x = 3\n",
     "while x > 0:\n",
@@ -273,6 +407,15 @@
     "else:\n",
     "    print(\"else:\", x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
